added all pages exept singleUsedTent (Announcement)

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,65 +1,136 @@
 {
-  "contentTest": "Content Test",
-  "Functional": "Features",
-  "Buy": "Buy",
-  "FAQ": "FAQ",
-  "Application": "Download",
-  "Contacts": "Contacts",
-  "Authopass": "Authopass",
-  "About authopass": "About Authopass",
-  "Password after authorization": "Password after authorization",
-  "heroSubText": "A safe and easy-to-use tool for storing account information and plastic cards.",
-  "Security": "Security",
-  "Simple in understanding": "Simple in understanding",
-  "Comfortable in use": "Comfortable in use",
-  "Anti-virus": "Anti-virus",
-  "Notes": "Notes",
-  "Support": "Support",
-  "securityText": "There is a biometric protection",
-  "simpleText": "It is possible to store information about plastic cards",
-  "comfotableText": "Available on any smartphone or an iOS and Android tablet",
-  "antivirusText": "There is an antivirus scanner",
-  "notesText": "It is possible to make notes for each account",
-  "supportText": "In the application, there is an opportunity to contact the support service directly in case of any questions",
-  "Yearly": "Annual",
-  "Monthly": "Monthly",
-  "Year": "Year",
-  "Month": "month",
-  "FaqTitle": "Popular Questions",
-  "faq 1 title": "What is Authopass?",
-  "faq 2 title": "How does Authopass work?",
-  "faq 3 title": "Why do I need Authopass?",
-  "faq 4 title": "Maximize the security of your accounts with Authopass",
-  "faq 1 subtext": "AUTHOPASS is a simple and secure (with multi-level protection) place to store passwords for your accounts and information about bank cards. This function allows you to store and quickly access sensitive information regarding logging into your accounts, as well as the cards linked to them.",
-  "faq 2 subtext": "With this function, you'll have a simple tool to control the security of your accounts. AUTHOPASS also helps store information about plastic cards, freeing you from worries during shopping. The Authopass feature (Password Generation) allows you to create random, complex, and secure passwords for your accounts. It provides automatic generation of unique combinations of characters, including uppercase and lowercase letters, numbers, and special symbols.",
-  "faq 3 subtext": "AUTHOPASS is your reliable guardian, ensuring the security and ease of managing your passwords and personal information, freeing you from unnecessary stress and memorizing passwords. This function helps ensure the maximum security of your accounts by preventing the use of weak or easily guessed passwords.",
-  "faq 4 subtext": "According to the minimum acceptable standards, each of your accounts must have an individual, unique, and complex password. The AUTHOPASS tool will help create any password and protect your account. According to digital security standards, the password for each account should be changed every 3-6 months. With AUTHOPASS, you can easily and securely store passwords and information about your accounts in a convenient and secure format on your smartphone or tablet",
-  "Download title": "download the app AUTHOPASS",
-  "Download subtitle": "To use the AUTHOPASS feature, download and activate the app Scutum Mobile Security",
-  "All rights reserved": "All rights reserved.",
-  "Information": "Information",
-  "Privacy Policy": "Privacy Policy",
-  "License": "License Agreement with the end user",
-  "Enter your information": "Enter your information",
+  "Homepage": "Homepage",
+  "Promotions": "Promotions",
+  "Promotion": "Promotion",
+  "About us": "About us",
+  "Video tips": "Video tips",
+  "Used tents": "Used tents",
+  "Сontacts": "Contacts",
+  "Patch": "Patch",
+  "Details": "Details",
+  "Lots": "Lots",
+  "Search": "Search",
+  "What you looking for?": "What are you looking for?",
+  "Category": "Category",
+  "See all": "See all",
+  "Find us": "Find us",
+  "Location": "Location",
+  "Call us": "Call us now to get a consultation from our manager!",
+  "Route": "Route",
+  "Call": "Call",
   "Name": "Name",
-  "Phone number": "Phone number",
+  "inputName": "Enter your name",
+  "inputPhone": "Enter your phone number",
+  "inputEmail": "Enter your email",
+  "inputPass": "Enter password",
+  "Enter": "Enter",
+  "Login": "Login",
+  "Register": "Register",
+  "Add announcement": "Add announcement",
+  "repitPass": "Confirm password",
+  "description promotion": "Promotion description",
+  "Details of promotion": "Promotion details",
+  "Cost": "Cost",
+  "Your savings": "Your savings",
+  "order a product": "To order a product, enter your contact details",
+  "exit": "Exit",
+  "leave": "Do you really want to leave?",
+  "announcement": "Announcement",
+  "Related Ads": "Related Ads",
+  "language": "Language",
+  "My announcement": "My Announcements",
+  "See other announcements": "See other announcements",
+  "semi_trailers_trailers_trucks": "on semi-trailers, trailers, trucks",
+  "repair_trucks_trailers_semi_trailers_grain_trailers": "We repair truck, trailer, semi-trailer, and grain trailer tarps",
+  "remont": "Repair",
+  "tenta": "TARPS",
+  "in_dnipro": "in Dnipro",
+  "tent_repair_in_dnipro": "Tent <span class='tentRepairDesktop'>{{TENT}}</span> repair in Dnipro",
+  "TENT": "TENTS",
+  "rem_tent": "TENT REPAIR",
+  "how we work": "how we work",
+  "Hide": "Hide",
+  "Read more": "Read more",
+  "UNIQUE PROMOTIONS": "UNIQUE PROMOTIONS",
+  "for_you": "for you",
+  "only_for_you": "only for you",
+  "Category Logo": "Category Logo",
+  "Ремонт тента полуприцепа": "Semi-trailer tent repair",
+  "Ремонт тента зерновоза": "Grain trailer tent repair",
+  "Ремонт тента легкового прицепа": "Car trailer tent repair",
+  "Ремонт тента газели": "Gazelle tent repair",
+  "Ремонт тента-палатки": "Tent repair",
+  "Ремонт верхушки тента": "Tent top repair",
+  "Таможенный ремонт по ТИР стандартам": "Customs repair according to TIR standards",
+  "Тентовая фурнитура": "Tent fittings",
+  "Тентовый инструмент": "Tent tool",
+  "1. Определяем объем и виды работ": "1. Determine the scope and types of work",
+  "Повреждения, требующие сервисного ремонта тента, бывают таких типов: порезы, порывы, проколы. Они устраняются методом клейки или сваривания горячим феном. Иногда требуется таможенный ремонт тента, чтобы он соответствовал условиям международных перевозок. Но чаще всего требуется ремонт верха тента, шторы или палатки. На первом этапе мы выбираем лучший способ для реставрации тента, чтобы он полноценно выполнял те же функции, что и новый. Готовим смету.": "Damage requiring tent service repairs can be of the following types: cuts, tears, punctures. They are eliminated by gluing or welding with a hot air gun. Sometimes customs repair of the tent is required to meet international transport conditions. But most often, roof tent repair, curtain, or tent repair is required. In the first stage, we choose the best way to restore the tent so that it fully performs the same functions as a new one. We prepare an estimate.",
+  "2. Подготавливаем поверхность": "2. Preparing the surface",
+  "Чтобы тент после ремонта служил долго, повреждённая поверхность должна быть тщательно очищена от грязи и пыли. Также при необходимости все места спайки должны быть обезжирены. Обязательно нужно обеспечить лучшее сцепление с материалами. Для этого поверхность протирается растворителем, после чего тщательно выравнивается.": "For the tent to last long after repair, the damaged surface must be thoroughly cleaned of dirt and dust. Also, if necessary, all splicing areas must be degreased. It is essential to ensure the best adhesion with the materials. For this, the surface is wiped with a solvent and then carefully leveled.",
+  "3. Убираем повреждения": "3. Remove the damage",
+  "Заплатка для спайки должна быть выбрана таким образом, чтобы ремонт тента был незаметен. Особенно если предполагается таможенный ремонт тента. Поэтому на третьем этапе мы выбираем подходящий материал, подбираем размер латки, аккуратно распределяем края и делаем пайку с помощью тентового фена. После завершения ремонта тента для авто мы обязательно проверяем, чтобы тент не пропускал воду. Таким образом мы обеспечиваем гарантированно качественный результат.": "The patch for splicing must be chosen so that the tent repair is invisible. Especially if customs repair of the tent is required. Therefore, at the third stage, we select the appropriate material, select the size of the patch, carefully distribute the edges, and do the soldering with a tent heat gun. After the auto tent repair is completed, we make sure that the tent does not leak water. Thus, we ensure a guaranteed quality result.",
+  "Order": "Order",
+  "Акция действует": "Promotion is active",
+  "VideoUroki": "VIDEO TIPS",
+  "po_remonty_tenta": "awning repair",
+  "Sorry_the_server_is_currently_unavailable_please_go_to_our_channel": "Sorry, the server is currently unavailable, please go to our channel",
+  "FranchiseTitle": "FRANCHISE:",
+  "workWithUs": "work with us",
+  "franchiseDescription": "Submit your application to obtain the right to receive orders from our service.",
+  "successMessage": "Thank you! Your application has been successfully sent, wait for our call!",
+  "errorMessage": "There was a problem submitting your application",
+  "Phone": "Phone",
   "Email": "Email",
-  "REQUIRED_EMAIL": "E-mail is a required field",
-  "INVALID_EMAIL": "E-mail must be valid",
-  "REQUIRED_NUMBER": "Phone number is required",
-  "INVALID_NUMBER": "Incorrect phone number",
-  "REQUIRED_NAME": "Name is required",
-  "INVALID_NAME": "Incorrect name",
-  "maxCharacters 12": "Maximum number of characters 12",
-  "Cancel": "Cancel",
-  "Save": "Save",
-  "failedPage error": "Cancellation",
-  "failedPage text": "The operation has been cancelled. No funds have been withdrawn from the account. Please try again.",
-  "failedPage button": "Return to the main page",
-  "thanks": "Thanks!",
-  "details_on_mail": "Details have been sent to your email.",
-  "ok": "OK",
-  "Days": "days premium access",
-  "Free": "for free",
-  "Download": "Donwload"
+  "Send": "Send",
+  "uniqueOpportunity": "We offer you a unique opportunity to become our partner and develop your business under the auspices of a successful brand. Our franchise provides comprehensive support, including attracting customers, providing the necessary equipment and tools.",
+  "franchiseBenefits": "Benefits of our franchise:",
+  "customerAttraction": "Customer Attraction:",
+  "customerAttractionDesc": "We provide you with a flow of orders from our service, ensuring a stable income.",
+  "equipmentProvision": "Equipment Provision:",
+  "equipmentProvisionDesc": "All the necessary equipment and tools for work will be provided to you at the start.",
+  "supportTraining": "Support and Training:",
+  "supportTrainingDesc": "We provide complete training and continuous support to our partners. We offer 3-week courses with accommodation and meals, where experienced masters conduct master classes on welding and tent cutting. Training includes:",
+  "theoreticalClasses": "Theoretical Classes:",
+  "theoreticalClassesDesc": "Basics of welding and tent cutting, safety techniques.",
+  "practicalClasses": "Practical Classes:",
+  "practicalClassesDesc": "Working with equipment, performing real orders under the guidance of mentors.",
+  "accommodationMeals": "Accommodation and Meals:",
+  "accommodationMealsDesc": "Comfortable living conditions and three meals a day are included in the course cost.",
+  "howToApply": "How to Apply:",
+  "fillForm": "Fill out the form:",
+  "fillFormDesc": "Go to our website and fill out the application form.",
+  "reviewApplication": "Review Application:",
+  "reviewApplicationDesc": "We will review your application and contact you to clarify the details.",
+  "signContract": "Sign Contract:",
+  "signContractDesc": "After successfully passing all the stages, we will sign a cooperation agreement.",
+  "contactForApplication": "Contacts for application submission:",
+  "email": "Email:",
+  "phone": "Phone:",
+  "address": "Address:",
+  "addressDesc": "Michurina str. 5, Slobozhanskyi, Dnipropetrovska oblast, 52005",
+  "waitingForYourApplication": "We are waiting for your application and will be happy to see you among our partners!",
+  "addressa": "Michurina str. 5, Slobozhanskyi, Dnipropetrovska oblast, 52005",
+  "subtitle": "Trust your tents to repair professionals! We guarantee high-quality work and impeccable results.",
+  "Спасибо за ваш заказ, ожидайте нашего звонка!": "Thank you for your order, look forward to our call!",
+  "При оформлении заказа произошла ошибка": "There was an error when placing the order",
+  "Боковая штора": "Side curtain",
+  "Мешок": "Bag",
+  "Верхушка штора": "Curtain top",
+  "Накидка зерновоз": "Grain wagon cape",
+  "Тент на газель": "Awning for gazelle",
+  "Баннер б/у": "Used banner",
+  "promotions_page_title": "Promotions | Tent Repair",
+  "promotions_page_description": "Find the best offers and promotions for tent repair in Dnipro.",
+  "contact_page_title": "Contacts | Tent Repair",
+  "contacts_page_description": "Contact us for awning repair in Dnipro! Discounts for many types of work.   Fast, reliable and affordable. Restoration of any damage. Call us and take advantage of the best deals right now! +380501589860",
+  "video_tutorials_page_title": "Video Tutorials | Tent Repair",
+  "video_tutorials_page_description": "Watch our video tutorials for helpful tips on tent repair.",
+  "home_page_title": "Repair of tents Dnipro | Repair of tents",
+  "home_page_description": "We offer quality repair of tents in Dnipro. Fast, reliable and affordable. Restoration of any damage. Call now and get a discount! +380501589860",
+  "used_tent_page_title": "Buy used awnings | Awning repair",
+  "used_tent_page_description": "Buy a used awning for various needs at a favorable price. Good condition, saving money and reliable protection from bad weather. Excellent choice for a summer house or business",
+  "Related Prom": "Similar promotions",
+  "All promotions": "All promotions",
+  "All banner": "All banner"
 }
