--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -122,6 +122,9 @@
   "Баннер б/у": "Баннер б/у",
   "promotions_page_title": "Акции | Ремонт Тента",
   "promotions_page_description": "Акции на ремонт тентов в Днепре! Скидки на множество видов работ. Быстро, качественно, надежно. Звоните и воспользуйтесь выгодными предложениями прямо сейчас!",
+
+  "contact_page_title": "Контакты | Ремонт Тента",
+  "contacts_page_description": "Контакты на ремонт тентов в Днепре! Скидки на множество видов работ.   Быстро, надежно и доступно. Восстановление любых повреждений. Звоните и воспользуйтесь выгодными предложениями прямо сейчас! +380501589860",
   "video_tutorials_page_title": "Видеоуроки | Ремонт Тента",
   "video_tutorials_page_description": "Ремонт тента с нашими подробными видеоуроками! Профессиональные советы, пошаговые инструкции и полезные лайфхаки помогут быстро и эффективно восстановить ваш тент.",
   "home_page_title": "Ремонт тентов Днепр | Ремонт тента",
