--- a/public/locales/uk/common.json
+++ b/public/locales/uk/common.json
@@ -122,6 +122,8 @@
   "Баннер б/у": "Банер б/в",
   "promotions_page_title": "Акції | Ремонт Тента",
   "promotions_page_description": "Акції на ремонт тентів у Дніпрі! Знижки на безліч видів робіт. Швидко, якісно, надійно. Телефонуйте і скористайтеся вигідними пропозиціями просто зараз!",
+  "contact_page_title": "Контакти | Ремонт Тента",
+  "contacts_page_description": "Контакти на ремонт тентів у Дніпрі! Знижки на безліч видів робіт.   Швидко, надійно та доступно. Відновлення будь-яких пошкоджень. Телефонуйте і скористайтеся вигідними пропозиціями просто зараз! +380501589860",
   "video_tutorials_page_title": "Відеоуроки | Ремонт Тента",
   "video_tutorials_page_description": "Ремонт тента з нашими докладними відеоуроками! Професійні поради, покрокові інструкції та корисні лайфхаки допоможуть швидко та ефективно відновити ваш тент.",
   "home_page_title": "Ремонт тентів Дніпро | Ремонт Тента",
