fixed promotion order form

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -132,5 +132,7 @@
   "used_tent_page_description": "Buy a used awning for various needs at a favorable price. Good condition, saving money and reliable protection from bad weather. Excellent choice for a summer house or business",
   "Related Prom": "Similar promotions",
   "All promotions": "All promotions",
-  "All banner": "All banner"
+  "All banner": "All banner",
+  "Please fill in all required fields": "Please fill in all required fields"
+
 }
