--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -133,5 +133,6 @@
   "used_tent_page_description": "Купите б/у тент для различныъ нужд по выгодной цене. Хорошее состояние, экономия средств и надежная защита от непогоды. Отличный выбор для дачи или бизнеса",
   "Related Prom": "Похожие акции",
   "All promotions": "Все акции",
-  "All banner": "Все Б/У тенты"
+  "All banner": "Все Б/У тенты",
+  "Please fill in all required fields": "Пожалуйста, заполните все поля"
 }
