--- a/public/locales/uk/common.json
+++ b/public/locales/uk/common.json
@@ -132,5 +132,6 @@
   "used_tent_page_description": "Купіть б/в тент для різних потреб за вигідною ціною. Хороший стан, економія коштів і надійний захист від негоди. Відмінний вибір для дачі або бізнесу",
   "Related Prom": "Схожі акціі",
   "All promotions": "Всі акції",
-  "All banner": "Всі Б/В тенти"
+  "All banner": "Всі Б/В тенти",
+  "Please fill in all required fields": "Будь ласка, заповніть всі поля"
 }
