add page delivery and payments

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -130,9 +130,12 @@
   "home_page_description": "We offer quality repair of tents in Dnipro. Fast, reliable and affordable. Restoration of any damage. Call now and get a discount! +380501589860",
   "used_tent_page_title": "Buy used awnings | Awning repair",
   "used_tent_page_description": "Buy a used awning for various needs at a favorable price. Good condition, saving money and reliable protection from bad weather. Excellent choice for a summer house or business",
+  "delivery_page_title": "Delivery and payment | Tent Repair",
+  "deliverys_page_description": "Delivery and payment - find out all the details about the delivery and payment methods for your orders. We offer convenient delivery conditions throughout Ukraine and a variety of payment methods: online, cash on delivery or bank transfer. Check out the delivery time, cost, and additional benefits of our service. Fast, convenient, reliable!", 
   "Related Prom": "Similar promotions",
   "All promotions": "All promotions",
   "All banner": "All banner",
-  "Please fill in all required fields": "Please fill in all required fields"
+  "Please fill in all required fields": "Please fill in all required fields",
+  "Delivery": "Delivery and payment"
 
 }
