--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -131,8 +131,12 @@
   "home_page_description": "Предлагаем качественный ремонт тентов в Днепре. Быстро, надежно и доступно. Восстановление любых повреждений. Звоните сейчас и получите скидку! +380501589860",
   "used_tent_page_title": "Купить Б/У тент | Ремонт тента",
   "used_tent_page_description": "Купите б/у тент для различныъ нужд по выгодной цене. Хорошее состояние, экономия средств и надежная защита от непогоды. Отличный выбор для дачи или бизнеса",
+  "delivery_page_title": "Доставка и оплата | Ремонт Тента",
+  "deliverys_page_description": "Доставка и оплата - узнайте все детали о способах доставки и оплаты ваших заказов. Мы предлагаем удобные условия доставки по всей Украине и разнообразные методы оплаты: онлайн, наложенный платеж или банковский перевод. Ознакомьтесь со сроками доставки, стоимостью и дополнительными преимуществами нашего сервиса. Быстро, удобно, надежно!",
   "Related Prom": "Похожие акции",
   "All promotions": "Все акции",
   "All banner": "Все Б/У тенты",
-  "Please fill in all required fields": "Пожалуйста, заполните все поля"
+  "Please fill in all required fields": "Пожалуйста, заполните все поля",
+  "Delivery": "Доставка и оплата"
+
 }
