--- a/public/locales/uk/common.json
+++ b/public/locales/uk/common.json
@@ -130,8 +130,12 @@
   "home_page_description": "Пропонуємо якісний ремонт тентів у Дніпрі. Швидко, надійно та доступно. Відновлення будь-яких пошкоджень. Телефонуйте зараз і отримайте знижку! +380501589860",
   "used_tent_page_title": "Купити Б/В тент | Ремонт тента",
   "used_tent_page_description": "Купіть б/в тент для різних потреб за вигідною ціною. Хороший стан, економія коштів і надійний захист від негоди. Відмінний вибір для дачі або бізнесу",
+  "delivery_page_title": "Доставка та оплата | Ремонт Тента",
+  "deliverys_page_description": "Доставка і оплата — дізнайтеся всі деталі про способи доставки та оплати ваших замовлень. Ми пропонуємо зручні умови доставки по всій Україні та різноманітні методи оплати: онлайн, післяплата або банківський переказ. Ознайомтеся з термінами доставки, вартістю та додатковими перевагами нашого сервісу. Швидко, зручно, надійно!",
   "Related Prom": "Схожі акціі",
   "All promotions": "Всі акції",
   "All banner": "Всі Б/В тенти",
-  "Please fill in all required fields": "Будь ласка, заповніть всі поля"
+  "Please fill in all required fields": "Будь ласка, заповніть всі поля",
+  "Delivery": "Доставка та   оплата"
+
 }
