--- a/public/locales/uk/common.json
+++ b/public/locales/uk/common.json
@@ -132,10 +132,13 @@
   "used_tent_page_description": "Купіть б/в тент для різних потреб за вигідною ціною. Хороший стан, економія коштів і надійний захист від негоди. Відмінний вибір для дачі або бізнесу",
   "delivery_page_title": "Доставка та оплата | Ремонт Тента",
   "deliverys_page_description": "Доставка і оплата — дізнайтеся всі деталі про способи доставки та оплати ваших замовлень. Ми пропонуємо зручні умови доставки по всій Україні та різноманітні методи оплати: онлайн, післяплата або банківський переказ. Ознайомтеся з термінами доставки, вартістю та додатковими перевагами нашого сервісу. Швидко, зручно, надійно!",
+  "exchange_page_title": "Обмін та повернення | Ремонт тента",
+  "exchanges_page_description": "Обмін та повернення — ознайомтеся з нашими умовами повернення товарів і обміну. Ми пропонуємо простий і зручний процес повернення або заміни продукції згідно з чинним законодавством України. Дізнайтеся про терміни, необхідні документи та порядок дій для швидкого вирішення вашого питання. Забезпечуємо якісний сервіс та турботу про наших клієнтів!",
   "Related Prom": "Схожі акціі",
   "All promotions": "Всі акції",
   "All banner": "Всі Б/В тенти",
   "Please fill in all required fields": "Будь ласка, заповніть всі поля",
-  "Delivery": "Доставка та   оплата"
+  "Delivery": "Доставка та   оплата",
+  "Exchange and return": "Обмін та повернення"
 
 }
