--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -133,10 +133,14 @@
   "used_tent_page_description": "Купите б/у тент для различныъ нужд по выгодной цене. Хорошее состояние, экономия средств и надежная защита от непогоды. Отличный выбор для дачи или бизнеса",
   "delivery_page_title": "Доставка и оплата | Ремонт Тента",
   "deliverys_page_description": "Доставка и оплата - узнайте все детали о способах доставки и оплаты ваших заказов. Мы предлагаем удобные условия доставки по всей Украине и разнообразные методы оплаты: онлайн, наложенный платеж или банковский перевод. Ознакомьтесь со сроками доставки, стоимостью и дополнительными преимуществами нашего сервиса. Быстро, удобно, надежно!",
+  "exchange_page_title": "Обмен и возврат | Ремонт тента",
+  "exchanges_page_description": "Обмен и возврат - ознакомьтесь с нашими условиями возврата товаров и обмена. Мы предлагаем простой и удобный процесс возврата или замены продукции согласно действующему законодательству Украины. Узнайте о сроках, необходимых документах и порядке действий для быстрого решения вашего вопроса. Обеспечиваем качественный сервис и заботу о наших клиентах!",
   "Related Prom": "Похожие акции",
   "All promotions": "Все акции",
   "All banner": "Все Б/У тенты",
   "Please fill in all required fields": "Пожалуйста, заполните все поля",
-  "Delivery": "Доставка и оплата"
+  "Delivery": "Доставка и оплата",
+  "Exchange and return": "Обмен и возврат"
+
 
 }
